--- a/linux-lqx-rebranded/linux-lqx-tag/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag/PKGBUILD
@@ -50,16 +50,17 @@ _1k_HZ_ticks=
 
 pkgbase=linux-lqx-tag
 # pkgname=('linux-lqx-tag' 'linux-lqx-tag-headers' 'linux-lxq-tag-docs')
-_major=5.1
+_major=5.2
 _srcname=linux-${_major}
-pkgver=5.1.20lqx1
-_pkgver=5.1.20-lqx1
+pkgver=5.2.3lqx1
+_pkgver=5.2.3-lqx1
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
 license=('GPL2')
 options=('!strip')
-makedepends=('git' 'kmod' 'inetutils' 'bc' 'libelf')
+makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'python-sphinx' 'python-sphinx_rtd_theme'
+             'graphviz' 'imagemagick')
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 
@@ -190,7 +191,7 @@ prepare() {
 build() {
   cd ${_srcname}
 
-  make bzImage modules
+  make bzImage modules htmldocs
 }
 
 _package() {
@@ -347,6 +348,18 @@ _package-docs() {
   mkdir -p "$builddir"
   cp -t "$builddir" -a Documentation
 
+  msg2 "Removing doctrees..."
+  rm -r "$builddir/Documentation/output/.doctrees"
+
+  msg2 "Moving HTML docs..."
+  local src dst
+  while read -rd '' src; do
+    dst="$builddir/Documentation/${src#$builddir/Documentation/output/}"
+    mkdir -p "${dst%/*}"
+    mv "$src" "$dst"
+    rmdir -p --ignore-fail-on-non-empty "${src%/*}"
+  done < <(find "$builddir/Documentation/output" -type f -print0)
+  
   msg2 "Adding symlink..."
   mkdir -p "$pkgdir/usr/share/doc"
   ln -sr "$builddir/Documentation" "$pkgdir/usr/share/doc/$pkgbase"
@@ -364,11 +377,11 @@ for _p in "${pkgname[@]}"; do
   }"
 done
 
-sha512sums=('ae96f347badc95f1f3acf506c52b6cc23c0bd09ce8f4ce6705d4b4058b62593059bba1bc603c8d8b00a2f19131e7e56c31ac62b45883a346fa61d655e178f236'
+sha512sums=('5a28f8a34c4e0470617f5638b7112e6252109b78f23b1eed484a228530970c7ef5c130d6e5a09cf25ea2f6a0329602dcc1ec66ce893182e15b27d99bd228789c'
             'SKIP'
-            'c9a368a0a258e76cdf9d2ee999ba31eac040b2d7839fe57a32b9c4483020e41225a02cf13b80b2468d3fa3f68a15f83eb0ea26f6361a3a2594ce5d7b4b88a094'
+            'f5790a5111d2138883cb746cac2d93f59d0568051797f33fa60362bdfcd9ca7ecdf0f11583c22fbb84e1fd1b2aafc6285db5005cf8a8ee614202c4485a47517f'
             'SKIP'
-            '1841964d6354ab896ef936d44e61176a4bcd9e2b58210a0aadf5153f2339695ac4688abc77ac427963ba65a0477d8530ef4d15a5b5599cc4f2b43f3a5c482bce'
+            '450b009050eed63f355dc93ce2525707b9898e154948228aac68ceaa5ddfd04e1eb1b787a0b8e448e024eeedada4ce90b9e166a3ccedca25ab0a43b1e3f4076f'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '2718b58dbbb15063bacb2bde6489e5b3c59afac4c0e0435b97fe720d42c711b6bcba926f67a8687878bd51373c9cf3adb1915a11666d79ccb220bf36e0788ab7'
             '8742e2eed421e2f29850e18616f435536c12036ff793f5682a3a8c980cf5dbfc88d17fd9539c87de15d9e4663dc3190f964f18a4722940465437927b6052abbf'
