--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -52,7 +52,7 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.2
 _srcname=zen-kernel
-pkgver=5.2.3.lqx1.r0.ge99978970c6f
+pkgver=5.2.4.lqx1.r0.g7f5822608b76
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
@@ -63,7 +63,7 @@ makedepends=('kmod' 'inetutils' 'bc' 'libelf' 'python-sphinx' 'python-sphinx_rtd
 #_lucjanpath="https://raw.githubusercontent.com/sirlucjan/kernel-patches/master/${_major}"
 _lucjanpath="https://gitlab.com/sirlucjan/kernel-patches/raw/master/${_major}"
 
-source=("git://github.com/zen-kernel/zen-kernel#tag=v5.2.3-lqx1"
+source=("git://github.com/zen-kernel/zen-kernel#tag=v5.2.4-lqx1"
          # the main kernel config files
         'config'
          # pacman hook for depmod
