--- a/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-git/PKGBUILD
@@ -56,7 +56,7 @@ _major=5.2
 _srcname=linux-${_major}
 _lqxpatchname=liquorix-package
 pkgbase=linux-lqx-git
-pkgver=5.2.4.lqx2.r1198.g4eff6d6
+pkgver=5.2.4_4.r1206.g8d29aa4
 pkgrel=1
 arch=('x86_64')
 url="http://liquorix.net/"
@@ -82,7 +82,7 @@ _kernelname=${pkgbase#linux}
 
 pkgver() {
   cd ${_lqxpatchname}
-  _ver="${_major}.${_minor}.lqx${_patchrel}"
+  _ver="${_major}.${_minor}_${_patchrel}"
   echo "${_ver}.r$(git rev-list --count HEAD).g$(git rev-parse --short HEAD)"
 }
 
