--- a/linux-lqx-rebranded/linux-lqx-tag/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag/PKGBUILD
@@ -51,9 +51,11 @@ _1k_HZ_ticks=
 pkgbase=linux-lqx-tag
 # pkgname=('linux-lqx-tag' 'linux-lqx-tag-headers' 'linux-lxq-tag-docs')
 _major=5.2
+_minor=5
+_lqx=lqx1
 _srcname=linux-${_major}
-pkgver=5.2.5.lqx1
-_pkgver=5.2.5-lqx1
+pkgver=${_major}.${_minor}.${_lqx}
+_pkgver=${_major}.${_minor}-${_lqx}
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
