--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -52,9 +52,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.2
 _minor=8
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.2.8.lqx1.r0.g332aa5174b0d
+pkgver=5.2.8.lqx2.r0.g92b6c74abcdf
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
