--- a/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/stable-rc/linux-juliagoda-git/PKGBUILD
@@ -70,8 +70,8 @@ _pkgbase=linux-lucjan
 # pkgname=('linux-juliagoda-git-kernel' 'linux-juliagoda-git-headers' 'linux-juliagoda-git-docs')
 _major=5.2
 _srcname=linux-stable-rc
-pkgver=5.2.8.r252.g0953e780f37b.ll26
-pkgrel=2
+pkgver=5.2.9.r108.gd3ad3ee990bc.ll26
+pkgrel=1
 arch=('x86_64')
 url="https://gitlab.com/sirlucjan/lucjan-kernels/wikis/README"
 license=('GPL2')
