--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -49,9 +49,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.2
 _minor=10
-_lqx=lqx2
+_lqx=lqx3
 _srcname=zen-kernel
-pkgver=5.2.10.lqx2.r0.g9ed200834737
+pkgver=5.2.10.lqx3.r0.g8c2508bd5bfe
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
