--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -48,10 +48,10 @@ _1k_HZ_ticks=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.2
-_minor=10
-_lqx=lqx3
+_minor=11
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.2.10.lqx3.r0.g8c2508bd5bfe
+pkgver=5.2.11.lqx1.r0.gb15d8aa85160
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
