--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -48,10 +48,10 @@ _1k_HZ_ticks=
 pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.2
-_minor=14
-_lqx=lqx2
+_minor=15
+_lqx=lqx1
 _srcname=zen-kernel
-pkgver=5.2.14.lqx2.r0.gc4cf484138c5
+pkgver=5.2.15.lqx1.r0.g130e9974326a
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
