--- a/linux-5.3.y/uml/linux-usermode-rc/PKGBUILD
+++ b/linux-5.3.y/uml/linux-usermode-rc/PKGBUILD
@@ -13,7 +13,7 @@ _stable=${_major}
 #pkgver=${_major}.${_minorc}
 #_stable=${_major}.${_minor}
 #_stablerc=${pkgver}-${_rcver}
-#_srcname=linux-${_stable}
+_srcname=linux-${_stable}
 pkgrel=1
 pkgdesc="User mode Linux kernel and modules"
 arch=('x86_64')
