--- a/juliagoda-kernels/experimental/linux-juliagoda-git/PKGBUILD
+++ b/juliagoda-kernels/experimental/linux-juliagoda-git/PKGBUILD
@@ -122,7 +122,7 @@ elif [ "$_linux_lucjan" = "pending" ]; then
 # _lucjanpath="https://raw.githubusercontent.com/sirlucjan/${_pkgbase}/master/pending"
  _lucjanpath="https://gitlab.com/sirlucjan/${_pkgbase}/raw/master/pending"
  _lucjanname='lucjan'
- _lucjanrev='ll36'
+ _lucjanrev='ll42'
  _lucjanpatch="${_major}-${_lucjanname}-${_lucjanrev}.patch"
 
 elif [ "$_linux_lucjan" = "testing" ]; then
@@ -145,8 +145,7 @@ elif [ "$_linux_lucjan" = "trunk" ]; then
 
 fi
 
-source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git"
-         #"git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git#branch=linux-${_major}.y"
+source=("git://git.kernel.org/pub/scm/linux/kernel/git/stable/linux.git#branch=linux-${_major}.y"
          # bfq-reverts
          #"${_bfqrevpath}/${_bfqrevpatch}"{,.sig}
          # linux-lucjan
