--- a/aur-rebased/linux-zen-git/PKGBUILD
+++ b/aur-rebased/linux-zen-git/PKGBUILD
@@ -47,9 +47,9 @@ _1k_HZ_ticks=
 
 pkgbase=linux-zen-git
 # pkgname=('linux-zen-git' 'linux-zen-git-headers' 'linux-zen-git-docs')
-_major=5.2
+_major=5.3
 _srcname=zen-kernel
-pkgver=5.2.10.r843251.gf39367fdbc68
+pkgver=5.3.0.r857704.g2215efc2d187
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
@@ -372,7 +372,7 @@ for _p in "${pkgname[@]}"; do
 done
 
 sha512sums=('SKIP'
-            '1fe41289e03c295e9d1ff35e68a790e8d323d00bd3621b4a6276fda53562a00cf3c85dd0904b516d15d0af54cb36294912b30fcff1c8afc5e768cf1ee1f9a746'
+            '0fef7082586a8ec58576bcbd1c7a1c24329d4dacb550734ecd12177e7dc683e33230126b3bbf4918537447e75c7236e528a8fc478416aef0020f616132ccf755'
             '7ad5be75ee422dda3b80edd2eb614d8a9181e2c8228cd68b3881e2fb95953bf2dea6cbe7900ce1013c9de89b2802574b7b24869fc5d7a95d3cc3112c4d27063a'
             '2718b58dbbb15063bacb2bde6489e5b3c59afac4c0e0435b97fe720d42c711b6bcba926f67a8687878bd51373c9cf3adb1915a11666d79ccb220bf36e0788ab7'
             '8742e2eed421e2f29850e18616f435536c12036ff793f5682a3a8c980cf5dbfc88d17fd9539c87de15d9e4663dc3190f964f18a4722940465437927b6052abbf'
