--- a/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
+++ b/linux-lqx-rebranded/linux-lqx-tag-git/PKGBUILD
@@ -49,9 +49,9 @@ pkgbase=linux-lqx-tag-git
 # pkgname=('linux-lqx-tag-git' 'linux-lqx-tag-git-headers' 'linux-lxq-tag-git-docs')
 _major=5.2
 _minor=17
-_lqx=lqx1
+_lqx=lqx2
 _srcname=zen-kernel
-pkgver=5.2.17.lqx1.r0.g392a92eb3ca3
+pkgver=5.2.17.lqx2.r0.g42df0f26ff8d
 pkgrel=1
 arch=('x86_64')
 url="https://github.com/zen-kernel/zen-kernel"
